<resources>
    <string name="app_name">人人签</string>
    <string name="app_logo_name">人脸识别考勤应用</string>
    <string name="app_logo_name_en">Face-Detected Sign Application</string>

    <!--  字符常量  -->
    <string name="back_confirm_toast">再按一次退出app</string>
    <!--  登录  -->
    <string name="username">用户名</string>
    <string name="student_id">学工号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="get_code">获取验证码</string>
    <string name="auth_code">验证码</string>
    <string name="confirm_password">再次输入密码</string>
    <string name="username_hint">请填写用户名 建议实名</string>

    <!--  首页  -->
    <string name="sign">签到</string>
    <string name="sign_activity">签到活动</string>
    <string name="sign_people">已签到人数：%s</string>
    <string name="edit_info">编辑资料 ></string>
    <string name="student">学生</string>
    <string name="clazz">班级</string>
    <string name="search_hint">请输入要找的签到活动</string>
    <string name="face_scan">人脸扫描</string>

    <!--  个人页  -->
    <string name="signed_activity">已签到活动</string>
    <string name="dark_mode">夜间模式</string>
    <string name="user_scan">扫一扫</string>
    <string name="setting">设置</string>

    <!--  详情页  -->
    <string name="detail_type">签到状态:  %s</string>
    <string name="detail_time">签到开始时间:  %s</string>
    <string name="detail_people">签到人数:  %1$d / %2$d</string>
    <string name="detail_end_time">签到截止时间:  %s</string>
    <string name="detail_sign_radius">签到距离: %s</string>

    <!--  签到页  -->
    <string name="sign_success">签到成功</string>
    <string name="sign_time">签到时间</string>
    <string name="sign_complete_text">完成</string>
    <string name="sign_not_detect_success">未检测到人脸</string>
    <string name="sign_scan_face">人脸识别</string>
    <string name="submit">提交</string>

    <!--  util  -->
    <string name="test_long_string">哈哈哈 哈哈哈啊爱看的舒服就是打开放得开方式登录森林砍伐奥克兰两款手机来扩大到了开发撒旦拉萨的看见路上看到案例的历史拉山口是多少了来上课啦流口水的拉萨德累斯顿老师楼上的就是上课阿拉十九点看\ndslkfj势力扩大解放奥地利开发加萨洛克发生了打开\nd\nd\n\f\nf\n\nf\n\nfn\f\nf\fn\fn\fn\fn\</string>
    <string name="home_detail_transition_cover">home_transition_cover</string>

    <!--  管理页  -->
    <string name="manage_sign_title">签到管理</string>
    <string name="manage_post_sign">发布签到活动</string>
    <string name="manage_lookup_my_sign">查看我发布的签到</string>
    <string name="new_sign_setting">新的签到设置</string>
    <string name="sign_activity_name">签到活动名称</string>
    <string name="sign_people_group">允许签到人群</string>
    <string name="please_fill_people_num">请填写人数</string>
    <string name="sign_start_time">签到开始时间</string>
    <string name="sign_end_time">签到结束时间</string>
    <string name="sign_place">签到地点设置</string>
    <string name="sign_basic_info">签到基本信息设置</string>
    <string name="select_sign_place">签到地点选择</string>
    <string name="post_sign_activity">发起签到</string>
    <string name="lookup_my_sign_activity">查看我的签到活动</string>
    <string name="lookup_total_detail">详情</string>
    <string name="lookup_end_time">结束时间</string>
    <string name="logout">退出登录</string>
    <string name="select_clazz">班级选择</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="previous_day">前一天</string>
    <string name="next_day">后一天</string>
    <string name="post_sign_distance">签到距离设置</string>
    <string name="distance">%s 米</string>
    <string name="select_clazz_hint">请选择签到班级</string>

    <string-array name="static_class_name">
        <item>计算机大类1901</item>
        <item>计算机大类1902</item>
        <item>计算机大类1903</item>
        <item>计算机大类1904</item>
        <item>计算机大类1905</item>
        <item>计算机大类1906</item>
        <item>计算机大类1907</item>
        <item>计算机大类1908</item>
        <item>计算机大类1909</item>
        <item>计算机与科学1801</item>
        <item>计算机与科学1802</item>
        <item>网络工程1801</item>
        <item>网络工程1802</item>
        <item>网络工程1803</item>
        <item>软件工程1801</item>
        <item>软件工程1802</item>
        <item>软件工程1803</item>
        <item>软件工程1804</item>
        <item>计算机与科学1701</item>
        <item>计算机与科学1702</item>
        <item>网络工程1701</item>
        <item>网络工程1702</item>
        <item>网络工程1703</item>
        <item>软件工程1701</item>
        <item>软件工程1702</item>
        <item>软件工程1703</item>
        <item>软件工程1704</item>
        <item>计算机与科学1601</item>
        <item>计算机与科学1602</item>
        <item>网络工程1601</item>
        <item>网络工程1602</item>
        <item>软件工程1601</item>
        <item>软件工程1602</item>
        <item>软件工程1603</item>
    </string-array>

    <!--  view  -->
    <string name="transition_logo_view">transition_logo_view</string>
    <string name="empty_content">没有内容哦</string>

</resources>
