<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCommonBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/detail_back_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCyan"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detail_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/signup_back"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detail_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/detail_back_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/detail_activity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mega_text_size"
                tools:text="@string/sign_activity"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <com.carson.gdufs_sign_system.widget.RoundImageView
                android:id="@+id/detail_cover"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:transitionName="@string/home_detail_transition_cover"
                app:radius="12dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/detail_activity_name" />

            <TextView
                android:id="@+id/detail_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_rect_white"
                android:elevation="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/colorBlack"
                android:padding="20dp"
                android:text="@string/test_long_string"
                app:layout_constraintTop_toBottomOf="@id/detail_cover" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_round_rect_white"
                android:elevation="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@id/detail_info">

                <TextView
                    android:id="@+id/detail_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/colorBlack"
                    android:text="@string/detail_type" />

                <TextView
                    android:id="@+id/detail_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/colorBlack"
                    android:text="@string/detail_time" />

                <TextView
                    android:id="@+id/detail_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/colorBlack"
                    android:text="@string/detail_area" />

                <TextView
                    android:id="@+id/detail_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/colorBlack"
                    android:text="@string/detail_people" />

                <TextView
                    android:id="@+id/detail_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/colorBlack"
                    android:text="@string/detail_end_time" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/detail_sign_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/detail_sign_fab_selector"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginBottom="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/sign"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/normal_text_size" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>