<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment"
    android:clipChildren="false">

    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textSize="@dimen/normal_text_size"
        android:theme="@style/EditTextUnderlineStyle"
        android:inputType="number"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/ic_logo" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="@dimen/normal_text_size"
        android:theme="@style/EditTextUnderlineStyle"
        android:inputType="textPassword"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/mini_text_size"
        android:text="@string/forget_password"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintRight_toRightOf="@id/et_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/button_solid_cyan_style"
        android:textColor="@color/colorWhite"
        android:text="@string/login"
        android:textSize="@dimen/button_text_size"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/button_stroke_cyan_style"
        android:textColor="@color/colorCyan"
        android:text="@string/register"
        android:textSize="@dimen/button_text_size"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>