<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/success_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/sign_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/huge_text_size"
            android:text="@string/sign_success"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/sign_time"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/sign_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/huge_text_size"
            android:textStyle="bold"
            tools:text="14:09"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_complete"
            android:background="@drawable/button_stroke_cyan_style"
            android:text="@string/sign_complete_text"
            android:textColor="@color/colorCyan"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="50dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>