<?xml version="1.0" encoding="utf-8"?>
<com.carson.gdufs_sign_system.widget.RoundRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_round_rect_white">

    <ImageView
        android:id="@+id/home_item_pic"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="#5d5d5d"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/home_item_activity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/colorBlack"
        android:lines="1"
        android:ellipsize="end"
        android:layout_below="@id/home_item_pic"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        tools:text="@string/sign_activity"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/home_item_sign_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/mini_text_size"
        tools:text="2019年11月30日 14：00-18：00"
        android:layout_alignLeft="@id/home_item_activity_name"
        android:layout_alignStart="@id/home_item_activity_name"
        android:layout_below="@id/home_item_activity_name"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/home_item_sign_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/quanta_text_size"
        android:textColor="@color/colorBlack"
        tools:text="@string/sign_people"
        android:layout_alignLeft="@id/home_item_activity_name"
        android:layout_alignStart="@id/home_item_activity_name"
        android:layout_below="@id/home_item_sign_time"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="45dp"
        android:layout_height="23dp"
        android:background="@drawable/bg_selector_home_item_button"
        android:text="@string/sign"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/quanta_text_size"
        android:layout_alignBottom="@id/home_item_sign_people"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp" />


</com.carson.gdufs_sign_system.widget.RoundRelativeLayout>