<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorCyan"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:paddingBottom="70dp">

            <include android:id="@+id/user_tab_header"
                layout="@layout/user_tab_header" />

            <TextView
                android:id="@+id/signed_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_activity"
                android:textSize="@dimen/huge_text_size"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/user_tab_header"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/activity_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5"
                android:textColor="@color/colorCyan"
                android:textSize="@dimen/huge_text_size"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/signed_activity"
                app:layout_constraintLeft_toRightOf="@id/signed_activity" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/signed_activity" />

            <RelativeLayout
                android:id="@+id/dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_selector_round_rect_white2gray"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toBottomOf="@id/user_recyclerview">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawableStart="@drawable/dark_mode"
                    android:text="@string/dark_mode"
                    android:textSize="@dimen/normal_text_size"
                    android:drawablePadding="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector_round_rect_white2gray"
                android:clickable="true"
                android:focusable="true"
                android:elevation="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toBottomOf="@id/dark_mode">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawableStart="@drawable/scan"
                    android:text="@string/user_scan"
                    android:textSize="@dimen/normal_text_size"
                    android:drawablePadding="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector_round_rect_white2gray"
                android:clickable="true"
                android:focusable="true"
                android:elevation="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/scan">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawableStart="@drawable/setting"
                    android:text="@string/setting"
                    android:textSize="@dimen/normal_text_size"
                    android:drawablePadding="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_logout"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/setting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/logout"
                    android:drawablePadding="8dp"
                    android:text="@string/logout"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/normal_text_size" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>